oriterm_core/tests/vttest/snapshots/vttest__menu2__120x40_02_screen_03.snap
---
source: oriterm_core/tests/vttest/menu2.rs
expression: text
---
12345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901 
                                                                                                                                    
  This is 132 column mode, light background.                                                                                        
   This is 132 column mode, light background.                                                                                       
    This is 132 column mode, light background.                                                                                      
     This is 132 column mode, light background.                                                                                     
      This is 132 column mode, light background.                                                                                    
       This is 132 column mode, light background.                                                                                   
        This is 132 column mode, light background.                                                                                  
         This is 132 column mode, light background.                                                                                 
          This is 132 column mode, light background.                                                                                
           This is 132 column mode, light background.                                                                               
            This is 132 column mode, light background.                                                                              
             This is 132 column mode, light background.                                                                             
              This is 132 column mode, light background.                                                                            
               This is 132 column mode, light background.                                                                           
                This is 132 column mode, light background.                                                                          
                 This is 132 column mode, light background.                                                                         
                  This is 132 column mode, light background.                                                                        
                   This is 132 column mode, light background.Push <RETURN>
