oriterm_core/tests/vttest/snapshots/vttest__menu2__120x40_02_screen_04.snap
---
source: oriterm_core/tests/vttest/menu2.rs
expression: text
---
12345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789 
                                                                                                                        
  This is 120 column mode, light background.                                                                            
   This is 120 column mode, light background.                                                                           
    This is 120 column mode, light background.                                                                          
     This is 120 column mode, light background.                                                                         
      This is 120 column mode, light background.                                                                        
       This is 120 column mode, light background.                                                                       
        This is 120 column mode, light background.                                                                      
         This is 120 column mode, light background.                                                                     
          This is 120 column mode, light background.                                                                    
           This is 120 column mode, light background.                                                                   
            This is 120 column mode, light background.                                                                  
             This is 120 column mode, light background.                                                                 
              This is 120 column mode, light background.                                                                
               This is 120 column mode, light background.                                                               
                This is 120 column mode, light background.                                                              
                 This is 120 column mode, light background.                                                             
                  This is 120 column mode, light background.                                                            
                   This is 120 column mode, light background.Push <RETURN>
