oriterm_core/tests/vttest/snapshots/vttest__menu2__120x40_02_screen_07.snap
---
source: oriterm_core/tests/vttest/menu2.rs
expression: text
---
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
Push <RETURN>                                                                                                           
Soft scroll down region [20..21] size 2 Line 45
