oriterm_core/tests/vttest/snapshots/vttest__menu2__120x40_02_screen_08.snap
---
source: oriterm_core/tests/vttest/menu2.rs
expression: text
---
Push <RETURN>                                                                                                           
Soft scroll down region [1..40] size 40 Line 45                                                                         
Soft scroll down region [1..40] size 40 Line 44                                                                         
Soft scroll down region [1..40] size 40 Line 43                                                                         
Soft scroll down region [1..40] size 40 Line 42                                                                         
Soft scroll down region [1..40] size 40 Line 41                                                                         
Soft scroll down region [1..40] size 40 Line 40                                                                         
Soft scroll down region [1..40] size 40 Line 39                                                                         
Soft scroll down region [1..40] size 40 Line 38                                                                         
Soft scroll down region [1..40] size 40 Line 37                                                                         
Soft scroll down region [1..40] size 40 Line 36                                                                         
Soft scroll down region [1..40] size 40 Line 35                                                                         
Soft scroll down region [1..40] size 40 Line 34                                                                         
Soft scroll down region [1..40] size 40 Line 33                                                                         
Soft scroll down region [1..40] size 40 Line 32                                                                         
Soft scroll down region [1..40] size 40 Line 31                                                                         
Soft scroll down region [1..40] size 40 Line 30                                                                         
Soft scroll down region [1..40] size 40 Line 29                                                                         
Soft scroll down region [1..40] size 40 Line 28                                                                         
Soft scroll down region [1..40] size 40 Line 27                                                                         
Soft scroll down region [1..40] size 40 Line 26                                                                         
Soft scroll down region [1..40] size 40 Line 25                                                                         
Soft scroll down region [1..40] size 40 Line 24                                                                         
Soft scroll down region [1..40] size 40 Line 23                                                                         
Soft scroll down region [1..40] size 40 Line 22                                                                         
Soft scroll down region [1..40] size 40 Line 21                                                                         
Soft scroll down region [1..40] size 40 Line 20                                                                         
Soft scroll down region [1..40] size 40 Line 19                                                                         
Soft scroll down region [1..40] size 40 Line 18                                                                         
Soft scroll down region [1..40] size 40 Line 17                                                                         
Soft scroll down region [1..40] size 40 Line 16                                                                         
Soft scroll down region [1..40] size 40 Line 15                                                                         
Soft scroll down region [1..40] size 40 Line 14                                                                         
Soft scroll down region [1..40] size 40 Line 13                                                                         
Soft scroll down region [1..40] size 40 Line 12                                                                         
Soft scroll down region [1..40] size 40 Line 11                                                                         
Soft scroll down region [1..40] size 40 Line 10                                                                         
Soft scroll down region [1..40] size 40 Line 9                                                                          
Soft scroll down region [1..40] size 40 Line 8                                                                          
Soft scroll down region [1..40] size 40 Line 7
