oriterm_core/tests/vttest/snapshots/vttest__menu2__120x40_02_screen_10.snap
---
source: oriterm_core/tests/vttest/menu2.rs
expression: text
---
Push <RETURN>                                                                                                           
Jump scroll down region [1..40] size 40 Line 45                                                                         
Jump scroll down region [1..40] size 40 Line 44                                                                         
Jump scroll down region [1..40] size 40 Line 43                                                                         
Jump scroll down region [1..40] size 40 Line 42                                                                         
Jump scroll down region [1..40] size 40 Line 41                                                                         
Jump scroll down region [1..40] size 40 Line 40                                                                         
Jump scroll down region [1..40] size 40 Line 39                                                                         
Jump scroll down region [1..40] size 40 Line 38                                                                         
Jump scroll down region [1..40] size 40 Line 37                                                                         
Jump scroll down region [1..40] size 40 Line 36                                                                         
Jump scroll down region [1..40] size 40 Line 35                                                                         
Jump scroll down region [1..40] size 40 Line 34                                                                         
Jump scroll down region [1..40] size 40 Line 33                                                                         
Jump scroll down region [1..40] size 40 Line 32                                                                         
Jump scroll down region [1..40] size 40 Line 31                                                                         
Jump scroll down region [1..40] size 40 Line 30                                                                         
Jump scroll down region [1..40] size 40 Line 29                                                                         
Jump scroll down region [1..40] size 40 Line 28                                                                         
Jump scroll down region [1..40] size 40 Line 27                                                                         
Jump scroll down region [1..40] size 40 Line 26                                                                         
Jump scroll down region [1..40] size 40 Line 25                                                                         
Jump scroll down region [1..40] size 40 Line 24                                                                         
Jump scroll down region [1..40] size 40 Line 23                                                                         
Jump scroll down region [1..40] size 40 Line 22                                                                         
Jump scroll down region [1..40] size 40 Line 21                                                                         
Jump scroll down region [1..40] size 40 Line 20                                                                         
Jump scroll down region [1..40] size 40 Line 19                                                                         
Jump scroll down region [1..40] size 40 Line 18                                                                         
Jump scroll down region [1..40] size 40 Line 17                                                                         
Jump scroll down region [1..40] size 40 Line 16                                                                         
Jump scroll down region [1..40] size 40 Line 15                                                                         
Jump scroll down region [1..40] size 40 Line 14                                                                         
Jump scroll down region [1..40] size 40 Line 13                                                                         
Jump scroll down region [1..40] size 40 Line 12                                                                         
Jump scroll down region [1..40] size 40 Line 11                                                                         
Jump scroll down region [1..40] size 40 Line 10                                                                         
Jump scroll down region [1..40] size 40 Line 9                                                                          
Jump scroll down region [1..40] size 40 Line 8                                                                          
Jump scroll down region [1..40] size 40 Line 7
